--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@develop
       - name: setup_nodejs
         uses: actions/setup-node@v1
         with:
