--- a/.gitignore
+++ b/.gitignore
@@ -54,9 +54,11 @@ typings/
 # dotenv environment variables file
 .env
 
-# gatsby files
+# Hugo files
 .cache/
 public
+static/css/
+static/js/
 
 # Mac files
 .DS_Store
