--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,8 @@
 runtime: nodejs10
 
+
 default_expiration: "0s"
+
 
 handlers:
   # file with extensions (e.g. .html)
@@ -9,13 +11,15 @@ handlers:
     upload: public/(.*)
     secure: always
 
-  - url: /sw.js
-    static_files: public/sw.js
-    upload: public/sw.js
+  - url: /(.*\.woff2)$
+    static_files: public/\1
+    upload: public/.*\.woff2
     secure: always
+    expiration: "600s"
 
-  - url: /static
-    static_dir: public/static
+  - url: /(.*\.(jpg|png))$
+    static_files: public/\1
+    upload: public/.*\.(jpg|png)$
     secure: always
     expiration: "600s"
 
@@ -39,3 +43,7 @@ handlers:
     static_files: public/\1/index.html
     upload: public/(.*)/index.html
     secure: always
+
+
+error_handlers:
+  - file: public/404.html
