--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -15,8 +15,8 @@ jobs:
           ref: develop
       - name: Setup hugo
         run: |
-            wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}-64bit.deb
-            sudo dpkg -i hugo_${HUGO_VERSION}-64bit.deb
+            wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.deb
+            sudo dpkg -i hugo_${HUGO_VERSION}_Linux-64bit.deb
             hugo version
         env:
             HUGO_VERSION: '0.60.1'
