fix hugo version

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,8 +13,8 @@ jobs:
         uses: actions/checkout@master
       - name: Setup hugo
         run: |
-            wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}-64bit.deb
-            sudo dpkg -i hugo_${HUGO_VERSION}-64bit.deb
+            wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.deb
+            sudo dpkg -i hugo_${HUGO_VERSION}_Linux-64bit.deb
             hugo version
         env:
             HUGO_VERSION: '0.60.1'
